--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,20 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="889b97">  <td>25/01/17 18:00:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="cancelVirtualVisit.cancelVirtualVisitFromMyAppointment()[pri:0, instance:niuHealth.cancelVirtualVisit@6392827e]">cancelVirtualVisitFromMyAppointment</td> 
-  <td>main@1664576493</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>25/01/17 18:00:46</td>   <td>-11153</td> <td>&nbsp;</td><td title="&gt;&gt;cancelVirtualVisit.configureReports()[pri:0, instance:niuHealth.cancelVirtualVisit@6392827e]">&gt;&gt;configureReports</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1664576493</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>25/01/17 18:01:49</td>   <td>51319</td> <td>&nbsp;</td><td title="&lt;&lt;cancelVirtualVisit.createReportAfterTest()[pri:0, instance:niuHealth.cancelVirtualVisit@6392827e]">&lt;&lt;createReportAfterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1664576493</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>25/01/17 18:01:14</td>   <td>16727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;cancelVirtualVisit.launchChrome()[pri:0, instance:niuHealth.cancelVirtualVisit@6392827e]">&gt;&gt;launchChrome</td> 
-<td>&nbsp;</td>  <td>main@1664576493</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>25/01/17 18:01:14</td>   <td>16727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;cancelVirtualVisit.launchChrome()[pri:0, instance:niuHealth.cancelVirtualVisit@6392827e]">&gt;&gt;launchChrome</td> 
-<td>&nbsp;</td>  <td>main@1664576493</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>25/01/17 18:01:48</td>   <td>51171</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;cancelVirtualVisit.publishReports(org.testng.ITestResult)[pri:0, instance:niuHealth.cancelVirtualVisit@6392827e]">&lt;&lt;publishReports</td> 
-<td>&nbsp;</td>  <td>main@1664576493</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>25/01/17 18:01:48</td>   <td>51171</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;cancelVirtualVisit.publishReports(org.testng.ITestResult)[pri:0, instance:niuHealth.cancelVirtualVisit@6392827e]">&lt;&lt;publishReports</td> 
-<td>&nbsp;</td>  <td>main@1664576493</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>25/01/17 18:01:22</td>   <td>24992</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="cancelVirtualVisit.testCancelVisit()[pri:0, instance:niuHealth.cancelVirtualVisit@6392827e]">testCancelVisit</td> 
-  <td>main@1664576493</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>25/01/22 14:20:16</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;firefoxLoginTestCases.configureReports()[pri:0, instance:niuHealth.firefoxLoginTestCases@1b2abca6]">&gt;&gt;configureReports</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@538185145</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>25/01/22 14:20:28</td>   <td>12350</td> <td>&nbsp;</td><td title="&lt;&lt;firefoxLoginTestCases.createReportAfterTest()[pri:0, instance:niuHealth.firefoxLoginTestCases@1b2abca6]">&lt;&lt;createReportAfterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@538185145</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>25/01/22 14:20:16</td>   <td>275</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;firefoxLoginTestCases.launchFirefox()[pri:0, instance:niuHealth.firefoxLoginTestCases@1b2abca6]">&gt;&gt;launchFirefox</td> 
+<td>&nbsp;</td>  <td>main@538185145</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>25/01/22 14:20:28</td>   <td>12134</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;firefoxLoginTestCases.publishReports(org.testng.ITestResult)[pri:0, instance:niuHealth.firefoxLoginTestCases@1b2abca6]">&lt;&lt;publishReports</td> 
+<td>&nbsp;</td>  <td>main@538185145</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>25/01/22 14:20:27</td>   <td>10897</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="firefoxLoginTestCases.testLoginOnFireFoxBrowser()[pri:0, instance:niuHealth.firefoxLoginTestCases@1b2abca6]">testLoginOnFireFoxBrowser</td> 
+  <td>main@538185145</td>   <td></td> </tr>
 </table>
