First commit on niu_health_automation repo

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\91738\AppData\Local\Temp\testng-eclipse-1466080965\testng-customsuite.xml</span>
+                    <span>C:\Users\91738\AppData\Local\Temp\testng-eclipse--766399148\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="niuHealth.firefoxLoginTestCases" class="method navigator-link" hash-for-method="testLoginOnFireFoxBrowser">testLoginOnFireFoxBrowser</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="niuHealth.NiuInsuranceTest" class="method navigator-link" hash-for-method="testProfile">testProfile</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">niuHealth.firefoxLoginTestCases</span>
+              <span class="class-name">niuHealth.NiuInsuranceTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testLoginOnFireFoxBrowser">
-                  </a> <!-- testLoginOnFireFoxBrowser -->
-                  <span class="method-name">testLoginOnFireFoxBrowser</span>
+                  <a name="testProfile">
+                  </a> <!-- testProfile -->
+                  <span class="method-name">testProfile</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\91738\AppData\Local\Temp\testng-eclipse-1466080965\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\91738\AppData\Local\Temp\testng-eclipse--766399148\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;niuHealth.firefoxLoginTestCases&quot;/&gt;
+      &lt;class name=&quot;niuHealth.NiuInsuranceTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -188,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testLoginOnFireFoxBrowser')
-data.setCell(0, 2, 'niuHealth.firefoxLoginTestCases')
-data.setCell(0, 3, 1227);
+data.setCell(0, 1, 'testProfile')
+data.setCell(0, 2, 'niuHealth.NiuInsuranceTest')
+data.setCell(0, 3, 18659);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 18 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,26 +221,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">niuHealth.firefoxLoginTestCases</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">niuHealth.NiuInsuranceTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">configureReports</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-method before">
-                <span class="method-name">launchFirefox</span>
-                <span class="method-start">278 ms</span>
+                <span class="method-name">launchChrome</span>
+                <span class="method-start">252 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">testLoginOnFireFoxBrowser</span>
-                <span class="method-start">10900 ms</span>
+                <span class="method-name">testProfile</span>
+                <span class="method-start">10490 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">publishReports([TestResult name=testLoginOnFireFoxBrowser status=SUCCESS method=firefoxLoginTestCases.testLoginOnFi...)</span>
-                <span class="method-start">12133 ms</span>
+                <span class="method-name">publishReports([TestResult name=testProfile status=SUCCESS method=NiuInsuranceTest.testProfile()[pri:0, instance:ni...)</span>
+                <span class="method-start">29155 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">createReportAfterTest</span>
-                <span class="method-start">12352 ms</span>
+                <span class="method-start">29399 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
