--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="889b97">  <td>25/01/22 14:20:16</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;firefoxLoginTestCases.configureReports()[pri:0, instance:niuHealth.firefoxLoginTestCases@1b2abca6]">&gt;&gt;configureReports</td> 
+<tr bgcolor="889b97">  <td>25/01/22 15:53:40</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;NiuInsuranceTest.configureReports()[pri:0, instance:niuHealth.NiuInsuranceTest@1b2abca6]">&gt;&gt;configureReports</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@538185145</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>25/01/22 14:20:28</td>   <td>12350</td> <td>&nbsp;</td><td title="&lt;&lt;firefoxLoginTestCases.createReportAfterTest()[pri:0, instance:niuHealth.firefoxLoginTestCases@1b2abca6]">&lt;&lt;createReportAfterTest</td> 
+<tr bgcolor="889b97">  <td>25/01/22 15:54:10</td>   <td>29396</td> <td>&nbsp;</td><td title="&lt;&lt;NiuInsuranceTest.createReportAfterTest()[pri:0, instance:niuHealth.NiuInsuranceTest@1b2abca6]">&lt;&lt;createReportAfterTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@538185145</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>25/01/22 14:20:16</td>   <td>275</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;firefoxLoginTestCases.launchFirefox()[pri:0, instance:niuHealth.firefoxLoginTestCases@1b2abca6]">&gt;&gt;launchFirefox</td> 
+<tr bgcolor="889b97">  <td>25/01/22 15:53:41</td>   <td>249</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NiuInsuranceTest.launchChrome()[pri:0, instance:niuHealth.NiuInsuranceTest@1b2abca6]">&gt;&gt;launchChrome</td> 
 <td>&nbsp;</td>  <td>main@538185145</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>25/01/22 14:20:28</td>   <td>12134</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;firefoxLoginTestCases.publishReports(org.testng.ITestResult)[pri:0, instance:niuHealth.firefoxLoginTestCases@1b2abca6]">&lt;&lt;publishReports</td> 
+<tr bgcolor="889b97">  <td>25/01/22 15:54:10</td>   <td>29154</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NiuInsuranceTest.publishReports(org.testng.ITestResult)[pri:0, instance:niuHealth.NiuInsuranceTest@1b2abca6]">&lt;&lt;publishReports</td> 
 <td>&nbsp;</td>  <td>main@538185145</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>25/01/22 14:20:27</td>   <td>10897</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="firefoxLoginTestCases.testLoginOnFireFoxBrowser()[pri:0, instance:niuHealth.firefoxLoginTestCases@1b2abca6]">testLoginOnFireFoxBrowser</td> 
+<tr bgcolor="889b97">  <td>25/01/22 15:53:51</td>   <td>10486</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NiuInsuranceTest.testProfile()[pri:0, instance:niuHealth.NiuInsuranceTest@1b2abca6]">testProfile</td> 
   <td>main@538185145</td>   <td></td> </tr>
 </table>
