--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="889b97">  <td>25/01/22 16:53:18</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;UploadProfileImageTest.configureReports()[pri:0, instance:niuHealth.UploadProfileImageTest@1b2abca6]">&gt;&gt;configureReports</td> 
+<tr bgcolor="889b97">  <td>25/01/23 15:14:46</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;ProfileTest.configureReports()[pri:0, instance:niuHealth.ProfileTest@1b2abca6]">&gt;&gt;configureReports</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@538185145</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>25/01/22 16:53:39</td>   <td>20544</td> <td>&nbsp;</td><td title="&lt;&lt;UploadProfileImageTest.createReportAfterTest()[pri:0, instance:niuHealth.UploadProfileImageTest@1b2abca6]">&lt;&lt;createReportAfterTest</td> 
+<tr bgcolor="889b97">  <td>25/01/23 15:15:03</td>   <td>16572</td> <td>&nbsp;</td><td title="&lt;&lt;ProfileTest.createReportAfterTest()[pri:0, instance:niuHealth.ProfileTest@1b2abca6]">&lt;&lt;createReportAfterTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@538185145</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>25/01/22 16:53:18</td>   <td>227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UploadProfileImageTest.launchChrome()[pri:0, instance:niuHealth.UploadProfileImageTest@1b2abca6]">&gt;&gt;launchChrome</td> 
+<tr bgcolor="889b97">  <td>25/01/23 15:14:46</td>   <td>330</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProfileTest.launchChrome()[pri:0, instance:niuHealth.ProfileTest@1b2abca6]">&gt;&gt;launchChrome</td> 
 <td>&nbsp;</td>  <td>main@538185145</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>25/01/22 16:53:39</td>   <td>20324</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UploadProfileImageTest.publishReports(org.testng.ITestResult)[pri:0, instance:niuHealth.UploadProfileImageTest@1b2abca6]">&lt;&lt;publishReports</td> 
+<tr bgcolor="889b97">  <td>25/01/23 15:15:02</td>   <td>16289</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProfileTest.publishReports(org.testng.ITestResult)[pri:0, instance:niuHealth.ProfileTest@1b2abca6]">&lt;&lt;publishReports</td> 
 <td>&nbsp;</td>  <td>main@538185145</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>25/01/22 16:53:28</td>   <td>9754</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UploadProfileImageTest.testProfileImage()[pri:0, instance:niuHealth.UploadProfileImageTest@1b2abca6]">testProfileImage</td> 
+<tr bgcolor="889b97">  <td>25/01/23 15:14:58</td>   <td>12431</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProfileTest.testProfile()[pri:0, instance:niuHealth.ProfileTest@1b2abca6]">testProfile</td> 
   <td>main@538185145</td>   <td></td> </tr>
 </table>
